--- a/_data/pubimg.yaml
+++ b/_data/pubimg.yaml
@@ -1,4 +1,15 @@
-2020orbnet: orbnet.png
-2020multi: ml4mol.png
+nag: nag.jpg
+autocap: autocap.jpg
+naic: naic.jpg
+ngsan: ngsan.jpg
+ruminate: ruminate.jpg
+mscap: mscap.jpg
+vsua: vsua.jpg
+sketch: sketch.jpg
+localglobalcontext: localglobalcontext.jpg
+convatt: convatt.jpg
+boosttransformer: boosttransformer.jpg
+wordgate: wordgate.jpg
+vatex2019: vatex2019.jpg
+vatex2020: vatex2020.jpg
 
-2019ice: ice.jpeg
