--- a/_config.yml
+++ b/_config.yml
@@ -3,15 +3,15 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: Zhuoran
+first_name: Longteng
 middle_name:
-last_name: Qiao
-email: zqiao@caltech.edu
+last_name: Guo
+chinese_name: (郭龙腾)
+email: longteng.guo@nlpr.ia.ac.cn
 description: # the ">" symbol means to ignore newlines until "footer_text:"
-  A practitioner of Molecular Simulation, Statistical Physics, and Machine Learning. \#AI4Science fellow, PhD student at Miller Group, Caltech.
+  A practitioner of Computer Vision and Deep Learning. 
 footer_text: >
   Powered by <a href="http://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-  Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
 
 url:  # the base hostname & protocol for your site
 baseurl: # the subpath of your site, e.g. /blog/
@@ -22,7 +22,7 @@ last_updated: false # set to true if you want to display last updated in the foo
 # -----------------------------------------------------------------------------
 
 navbar_fixed: true
-footer_fixed: true
+footer_fixed: false
 
 # Dimensions
 max_width: 800px
@@ -40,22 +40,23 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: zrqiao # your GitHub user name
-twitter_username: ZhuoranQ # your Twitter handle
-linkedin_username: zhuoran-qiao-269003153 # your LinkedIn user name
-scholar_userid: -u83TOkAAAAJ # your Google Scholar ID
-orcid_id: 0000-0002-5704-7331 # your ORCID ID
+github_username: ltguo19 # your GitHub user name
+twitter_username:  # your Twitter handle
+linkedin_username: 龙腾-郭-823753ba # your LinkedIn user name
+scholar_userid: OaGRHWYAAAAJ # your Google Scholar ID
+orcid_id:  # your ORCID ID
 medium_username: # your Medium username
 quora_username: # your Quora username
 publons_id: # your ID on Publons
-research_gate_profile: Zhuoran_Qiao # your profile on ResearchGate
+research_gate_profile:  # your profile on ResearchGate
 blogger_url: # your blogger URL
 keybase_username: # your keybase user name
 
 contact_note: >
-    If you would like to virtually reach me via Zoom - https://caltech.zoom.us/j/84116684122
+#    If you would like to virtually reach me via Zoom - https://caltech.zoom.us/j/84116684122
 
 google_analytics: UA-XXXXXXXXX # out your google-analytics code
+panelbear_analytics: XXXXXXXXX # panelbear analytics site ID
 
 # -----------------------------------------------------------------------------
 # Blog
@@ -70,7 +71,7 @@ pagination:
   enabled: true
 
 # Comments
-disqus_shortname: zqiao # put your disqus shortname
+disqus_shortname: ltguo # put your disqus shortname
 
 # -----------------------------------------------------------------------------
 # Collections
@@ -127,8 +128,8 @@ plugins:
 
 scholar:
 
-  last_name: Qiao
-  first_name: Zhuoran
+  last_name: Guo
+  first_name: Longteng
 
   style: apa
   locale: en
@@ -150,9 +151,10 @@ scholar:
 # Optional Features
 # -----------------------------------------------------------------------------
 
-enable_google_analytics:  true
+enable_google_analytics:  false
+enable_panelbear_analytics: true
 enable_mansory:           true
-enable_math:              true
+enable_math:              false
 enable_tooltips:          false
 enable_darkmode:          true
 show_social_icons:        true
