add profile picture

--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ contact_note: >
 #    If you would like to virtually reach me via Zoom - https://caltech.zoom.us/j/84116684122
 
 google_analytics: UA-XXXXXXXXX # out your google-analytics code
-panelbear_analytics: XXXXXXXXX # panelbear analytics site ID
+panelbear_analytics: Ibm8AyMybeI # panelbear analytics site ID
 
 # -----------------------------------------------------------------------------
 # Blog
